[gd_scene load_steps=5 format=2]

[ext_resource path="res://play/LevelButton.gd" type="Script" id=1]
[ext_resource path="res://play/Green Button 2.png" type="Texture" id=2]
[ext_resource path="res://play/Red Button.png" type="Texture" id=3]
[ext_resource path="res://Minigames/ScoreScreen/Star Blank.png" type="Texture" id=4]

[node name="LevelButton" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -48.0
margin_top = -48.0
margin_right = 49.0
margin_bottom = 49.0
rect_scale = Vector2( 1.00302, 1 )
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="Star1" type="Sprite" parent="."]
position = Vector2( -50, 60 )
scale = Vector2( 1.00302, 1 )
texture = ExtResource( 4 )

[node name="Star2" type="Sprite" parent="."]
position = Vector2( 0, 75 )
scale = Vector2( 1.00302, 1 )
texture = ExtResource( 4 )

[node name="Star3" type="Sprite" parent="."]
position = Vector2( 50, 60 )
scale = Vector2( 1.00302, 1 )
texture = ExtResource( 4 )
[connection signal="pressed" from="TextureButton" to="." method="_on_LevelButton_pressed"]
